--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "yarn build.client && yarn build.server",
+    "build.client": "webpack --config config/webpack.config.client.js",
+    "build.server": "webpack --config config/webpack.config.server.js",
     "build.dev": "webpack --mode development",
     "start": "webpack-dev-server --mode development"
   },
@@ -19,7 +21,8 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
