--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build.client": "webpack --config config/webpack.config.client.js",
     "build.server": "webpack --config config/webpack.config.server.js",
     "build.dev": "webpack --mode development",
-    "start": "webpack-dev-server --mode development"
+    "start": "node dist/server.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
